fix spacing

--- a/src/app/hero-grid/hero-grid.component.css
+++ b/src/app/hero-grid/hero-grid.component.css
@@ -1,8 +1,3 @@
-.attribute-section {
-    margin: 20px;
-    display: flex;
-}
-
 h4 {
     display: block;
     font-weight: lighter;
